--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/moment.min.js"></script>
 	<script src="js/common.js"></script>
 	<script src="js/all-issues.js"></script>
 
@@ -59,14 +60,7 @@
 					<input type="text" class="form-control" placeholder="Find a problem...">
 					<span class="input-group-btn">
 						<button class="btn btn-primary" type="button">Search</button>
-						<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<a class="dropdown-item" href="#">Something else here</a>
-							<div role="separator" class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Separated link</a>
-						</div>
+						<button class="btn btn-primary" type="button"><i class="fa fa-question"></i></button>
 					</span>
 				</div>
 			</div>
@@ -75,7 +69,7 @@
 
 		<div class="row">
 			<div class="col">
-				<div class="list-group">
+				<div class="list-group" id="all-issues">
 					<div class="list-group-item flex-column align-items-start list-heading">
 						<div class="d-flex flex-row">
 							<div class="p-2 col"><b>Problem number</b></div>
@@ -85,25 +79,6 @@
 							<div class="p-2 col"><b>Problem summary</b></div>
 						</div>
 					</div>
-
-					<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-						<div class="d-flex flex-row">
-							<div class="p-2 col col-overflow"><b>1234</b></div>
-							<div class="p-2 col col-overflow">20-10-2017 09:00</div>
-							<div class="p-2 col col-overflow"><span class="orange">Ongoing</span></div>
-							<div class="p-2 col col-overflow">Printer issue</div>
-							<div class="p-2 col col-overflow">Documents not printing</div>
-						</div>
-					</a>
-					<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-						<div class="d-flex flex-row">
-							<div class="p-2 col col-overflow"><b>1235</b></div>
-							<div class="p-2 col col-overflow">20-10-2017 09:01</div>
-							<div class="p-2 col col-overflow"><span class="red">Pending</span></div>
-							<div class="p-2 col col-overflow">Software issue</div>
-							<div class="p-2 col col-overflow">Web browser not opening</div>
-						</div>
-					</a>
 				</div>
 			</div>
 		</div>
