--- a/issue.html
+++ b/issue.html
@@ -82,7 +82,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3 problem-metadata">
+			<div class="col-md-3 problem-metadata animated fadeInUp">
 				<h2><i class="fa fa-ticket"></i> #<span id="problemId"></span></h2>
 				<h4>Status: <span id="status"></span></h4>
 				<p><i class="fa fa-clock-o"></i>&nbsp; <span id="createdAt"></span></p>
