--- a/new.html
+++ b/new.html
@@ -12,6 +12,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -51,7 +52,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-3 problem-metadata">
+			<div class="col-sm-3 problem-metadata animated fadeInUp">
 				<h2><i class="fa fa-plus"></i> New ticket</h2>
 				<div class="form-group">
 					<label for="created-by">Created by</label>
@@ -60,7 +61,7 @@
 				<hr>
 				<button type="button" class="btn btn-primary w-100" id="button-create" style="float: right;">Create issue</button>
 			</div>
-			<div class="col-sm-9">
+			<div class="col-sm-9 animated fadeInUp">
 				<form>
 					<div class="row">
 						<div class="col-sm">
