--- a/new.html
+++ b/new.html
@@ -89,6 +89,11 @@
 					</select>
 				</div>
 
+				<div class="form-group">
+					<label for="tags">Tags <i>(comma separated)</i></label>
+					<input class="form-control" id="tags">
+				</div>
+
 				<label>Issue classification</label>
 				<ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
 					<li class="nav-item">
