cleanup issue/query > ticket

--- a/analytics.html
+++ b/analytics.html
@@ -69,9 +69,8 @@
 							<thead>
 								<tr>
 									<th>Operator name</th>
-									<th>Open queries</th>
-									<th>Closed queries</th>
-									<th>Speciality</th>
+									<th>Open tickets</th>
+									<th>Closed tickets</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -79,19 +78,16 @@
 									<td>John</td>
 									<td>0</td>
 									<td>6</td>
-									<td>Hardware</td>
 								</tr>
 								<tr>
 									<td>Jim</td>
 									<td>3</td>
 									<td>2</td>
-									<td>Software</td>
 								</tr>
 								<tr>
 									<td>Amy</td>
 									<td>8</td>
-									<td>3</td>
-									<td>Hardware</td>           
+									<td>3</td>        
 								</tr>
 							</tbody>
 						</table>
@@ -100,11 +96,11 @@
 						<div class="row">
 							<div class="col">
 								<h1 class="display-3">26</h1>
-								<p class="lead">Total open issues</p>
+								<p class="lead">Total open tickets</p>
 							</div>
 							<div class="col">
 								<h1 class="display-3">52</h1>
-								<p class="lead">Total closed issues</p>
+								<p class="lead">Total closed tickets</p>
 							</div>
 							<div class="col">
 								<h1 class="display-3">6</h1>
