--- a/new.html
+++ b/new.html
@@ -59,7 +59,7 @@
 					<h4 id="created-by"></h4>
 				</div>
 				<hr>
-				<button type="button" class="btn btn-primary w-100" id="button-create" style="float: right;">Create issue</button>
+				<button type="button" class="btn btn-primary w-100" id="button-create" style="float: right;">Create ticket</button>
 			</div>
 			<div class="col-sm-9 animated fadeInUp">
 				<form>
