change analytics table for bootstrap list

--- a/analytics.html
+++ b/analytics.html
@@ -65,32 +65,57 @@
 
 				<div class="tab-content">
 					<div class="tab-pane fade active show" id="open-queries" role="tabpanel">
-						<table class="table table-hover">
-							<thead>
-								<tr>
-									<th>Operator name</th>
-									<th>Open tickets</th>
-									<th>Closed tickets</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>John</td>
-									<td>0</td>
-									<td>6</td>
-								</tr>
-								<tr>
-									<td>Jim</td>
-									<td>3</td>
-									<td>2</td>
-								</tr>
-								<tr>
-									<td>Amy</td>
-									<td>8</td>
-									<td>3</td>        
-								</tr>
-							</tbody>
-						</table>
+						<div class="list-group" id="all-issues">
+							<div class="list-group-item flex-column align-items-start list-heading">
+								<div class="d-flex flex-row">
+									<div class="p-2 col"><b>Operator</b></div>
+									<div class="p-2 col"><b>Open tickets</b></div>
+									<div class="p-2 col"><b>Closed tickets</b></div>
+								</div>
+							</div>
+							<div class="list-group-item flex-column align-items-start">
+								<div class="d-flex flex-row">
+									<div class="p-2 col">Tom Snelling</div>
+									<div class="p-2 col">0</div>
+									<div class="p-2 col">0</div>
+								</div>
+							</div>
+							<div class="list-group-item flex-column align-items-start">
+								<div class="d-flex flex-row">
+									<div class="p-2 col">Dan Page</div>
+									<div class="p-2 col">0</div>
+									<div class="p-2 col">0</div>
+								</div>
+							</div>
+							<div class="list-group-item flex-column align-items-start">
+								<div class="d-flex flex-row">
+									<div class="p-2 col">Adam Morley</div>
+									<div class="p-2 col">0</div>
+									<div class="p-2 col">0</div>
+								</div>
+							</div>
+							<div class="list-group-item flex-column align-items-start">
+								<div class="d-flex flex-row">
+									<div class="p-2 col">Timo Kiukkanen</div>
+									<div class="p-2 col">0</div>
+									<div class="p-2 col">0</div>
+								</div>
+							</div>
+							<div class="list-group-item flex-column align-items-start">
+								<div class="d-flex flex-row">
+									<div class="p-2 col">Joe Cant</div>
+									<div class="p-2 col">0</div>
+									<div class="p-2 col">0</div>
+								</div>
+							</div>
+							<div class="list-group-item flex-column align-items-start">
+								<div class="d-flex flex-row">
+									<div class="p-2 col">Ghassan Ebrahim</div>
+									<div class="p-2 col">0</div>
+									<div class="p-2 col">0</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="tab-pane fade active" id="other-stats" role="tabpanel">
 						<div class="row">
