add ability to sort by id/status

--- a/ticket.html
+++ b/ticket.html
@@ -146,11 +146,11 @@
 					</div>
 					<div class="form-group">
 						<label for="problemSummary">Problem summary</label>
-		    			<input type="text" class="form-control" id="problemSummary" value="Documents not printing." disabled>
+		    			<input type="text" class="form-control" id="problemSummary" disabled>
 					</div>
 					<div class="form-group">
 						<label for="problemDetail">Problem details</label>
-						<textarea class="form-control" rows="5" id="problemDetail" disabled>Documents are successfully being sent to the printer, but nothing is ever printed.</textarea>
+						<textarea class="form-control" rows="5" id="problemDetail" disabled></textarea>
 					</div>
 				</form>
 			</div>
