--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 				<div class="list-group" id="all-issues">
 					<div class="list-group-item flex-column align-items-start list-heading">
 						<div class="d-flex flex-row">
-							<div class="p-2 col"><b>Ticket number</b>&nbsp; <i class="fa fa-sort sort-button" id="sort-id"></i></div>
-							<div class="p-2 col"><b>Time submitted</b></div>
+							<div class="p-2 col"><b>Number</b>&nbsp; <i class="fa fa-sort sort-button" id="sort-id"></i></div>
+							<div class="p-2 col"><b>Submitted</b></div>
 							<div class="p-2 col"><b>Status</b>&nbsp; <i class="fa fa-sort sort-button" id="sort-status"></i></div>
-							<div class="p-2 col"><b>Problem type</b></div>
-							<div class="p-2 col"><b>Problem summary</b></div>
+							<div class="p-2 col"><b>Type</b></div>
+							<div class="p-2 col"><b>Summary</b></div>
 						</div>
 					</div>
 				</div>
