--- a/analytics.html
+++ b/analytics.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Helpdesk - Analytics</title>
 	<meta name=viewport content="width=device-width, initial-scale=1">
+	<link rel="icon" href="favicon.ico?v=1.0">
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
