add ticket created prompt

--- a/new.html
+++ b/new.html
@@ -61,6 +61,7 @@
 				</div>
 				<hr>
 				<button type="button" class="btn btn-primary w-100" id="button-create" style="float: right;">Create ticket</button>
+				<h4 class="green" id="created-prompt" style="display: none;"><i class="fa fa-check"></i> Ticket created!</h4>
 			</div>
 			<div class="col-sm-9 animated fadeInUp">
 				<form>
