--- a/about.html
+++ b/about.html
@@ -56,6 +56,34 @@
 				<div class="jumbotron">
 					<h1 class="display-3">Helpdesk</h1>
 					<p class="lead">17COB290 - Team project deliverable part 1</p>
+					<hr>
+
+					<div class="row">
+						<div class="col">
+							<div class="card">
+								<div class="card-body">
+									<h4 class="card-title">View all existing tickets</h4>
+									<a href="index.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="card">
+								<div class="card-body">
+									<h4 class="card-title">Create a new ticket</h4>
+									<a href="new.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="card">
+								<div class="card-body">
+									<h4 class="card-title">View system analytics</h4>
+									<a href="analytics.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
