--- a/all.html
+++ b/all.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Helpdesk - About</title>
+	<title>Helpdesk - Home</title>
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link rel="icon" href="favicon.ico?v=1.0">
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/moment.min.js"></script>
+	<script src="js/fuse.min.js"></script>
 	<script src="js/common.js"></script>
 	<script src="js/all-issues.js"></script>
 
@@ -17,15 +19,15 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-		<a class="navbar-brand" href="#">Helpdesk</a>
+		<a class="navbar-brand" href="index.html">Helpdesk</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="index.html">Existing tickets</a>
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Existing tickets <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="new.html">New ticket</a>
@@ -49,39 +51,31 @@
 			</form>
 		</div>
 	</nav>
-	
+
 	<div class="container">
 		<div class="row">
-			<div class="col">
-				<div class="jumbotron">
-					<h1 class="display-3">Helpdesk</h1>
-					<p class="lead">17COB290 - Team project deliverable part 1</p>
-					<hr>
+			<div class="col-md-6">
+				<h2><i class="fa fa-ticket"></i> Tickets</h2>
+			</div>
+			<div class="col-md-6">
+				<div class="input-group">
+					<input type="text" class="form-control" id="searchInput" placeholder="Find a ticket...">
+					<span class="input-group-addon" data-toggle="tooltip" data-placement="bottom" title="Search by issue number, status, type or summary"><i class="fa fa-question" ></i></span>
+				</div>
+			</div>
+		</div>
+		<hr>
 
-					<div class="row">
-						<div class="col">
-							<div class="card">
-								<div class="card-body">
-									<h4 class="card-title">View all existing tickets</h4>
-									<a href="index.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card">
-								<div class="card-body">
-									<h4 class="card-title">Create a new ticket</h4>
-									<a href="new.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card">
-								<div class="card-body">
-									<h4 class="card-title">View system analytics</h4>
-									<a href="analytics.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
-								</div>
-							</div>
+		<div class="row">
+			<div class="col">
+				<div class="list-group" id="all-issues">
+					<div class="list-group-item flex-column align-items-start list-heading">
+						<div class="d-flex flex-row">
+							<div class="p-2 col"><b>Number</b>&nbsp; <i class="fa fa-sort sort-button" id="sort-id"></i></div>
+							<div class="p-2 col"><b>Submitted</b></div>
+							<div class="p-2 col"><b>Status</b>&nbsp; <i class="fa fa-sort sort-button" id="sort-status"></i></div>
+							<div class="p-2 col"><b>Type</b></div>
+							<div class="p-2 col"><b>Summary</b></div>
 						</div>
 					</div>
 				</div>
