--- a/new.html
+++ b/new.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-		<a class="navbar-brand" href="about.html">Helpdesk</a>
+		<a class="navbar-brand" href="index.html">Helpdesk</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -26,7 +26,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="index.html">Existing tickets</a>
+					<a class="nav-link" href="all.html">Existing tickets</a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="#">New ticket <span class="sr-only">(current)</span></a>
