add list of open tickets to dashboard

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/common.js"></script>
-	<script src="js/all-issues.js"></script>
+	<script src="js/dash.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -54,7 +54,7 @@
 		<div class="row">
 			<div class="col">
 				<div class="jumbotron">
-					<h1 class="display-3">Helpdesk</h1>
+					<h1 class="display-3">Helpdesk dashboard</h1>
 					<p class="lead">17COB290 - Team project deliverable part 1</p>
 					<hr>
 
@@ -85,6 +85,11 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<div id="open-issues"></div>
 			</div>
 		</div>
 	</div>
