index page now responsive, closing tabs now keeps you on the same page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Helpdesk - About</title>
+	<title>Helpdesk - Dash</title>
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link rel="icon" href="favicon.ico?v=1.0">
 
@@ -59,24 +59,24 @@
 					<hr>
 
 					<div class="row">
-						<div class="col">
-							<div class="card">
+						<div class="col-md">
+							<div class="card mb-3">
 								<div class="card-body">
 									<h4 class="card-title">View all existing tickets</h4>
 									<a href="all.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="card">
+						<div class="col-md">
+							<div class="card mb-3">
 								<div class="card-body">
 									<h4 class="card-title">Create a new ticket</h4>
 									<a href="new.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="card">
+						<div class="col-md">
+							<div class="card mb-3">
 								<div class="card-body">
 									<h4 class="card-title">View system analytics</h4>
 									<a href="analytics.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
