--- a/all.html
+++ b/all.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Helpdesk - Home</title>
+	<title>Helpdesk - All tickets</title>
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link rel="icon" href="favicon.ico?v=1.0">
 
