--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Helpdesk - Dash</title>
+	<title>Helpdesk - Login</title>
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link rel="icon" href="favicon.ico?v=1.0">
 
@@ -16,81 +16,24 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-		<a class="navbar-brand" href="#">Helpdesk</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="all.html">Existing tickets</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="new.html">New ticket</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="analytics.html">Analytics</a>
-				</li>
-			</ul>
-			<form class="form-inline my-2 my-lg-0">
-				<div class="input-group">
-					<span class="input-group-addon" id="basic-addon1">Current user:</span>
-					<select class="custom-select" id="user-select">
-						<option>Tom Snelling</option>
-						<option>Dan Page</option>
-						<option>Adam Morley</option>
-						<option>Timo Kiukkanen</option>
-						<option>Joe Cant</option>
-						<option>Ghassan Ebrahim</option>
-					</select>
-				</div>
+	<div class="container" style="margin-top: 5%">
+		<div class="card">
+		  <img class="card-img-top" src="loginLogo.jpg" alt="Card image cap">
+		  <div class="card-body" align="right">
+		    <h4 class="card-title">Sign in</h4>
+		    <form>
+			  <div class="form-group">
+			    <label for="exampleInputEmail1">Email address</label>
+			    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+			    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+			  </div>
+			  <div class="form-group">
+			    <label for="exampleInputPassword1">Password</label>
+			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+			  </div>
+			  <a href="dash.html">Login</a>
 			</form>
-		</div>
-	</nav>
-	
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<div class="jumbotron">
-					<h1 class="display-3">Helpdesk dashboard</h1>
-					<p class="lead">17COB290 - Team project deliverable part 1</p>
-					<hr>
-
-					<div class="row">
-						<div class="col-md">
-							<div class="card mb-3">
-								<div class="card-body">
-									<h4 class="card-title">View all existing tickets</h4>
-									<a href="all.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md">
-							<div class="card mb-3">
-								<div class="card-body">
-									<h4 class="card-title">Create a new ticket</h4>
-									<a href="new.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md">
-							<div class="card mb-3">
-								<div class="card-body">
-									<h4 class="card-title">View system analytics</h4>
-									<a href="analytics.html" class="btn btn-primary btn-grow"><i class="fa fa-arrow-right"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<div id="open-issues"></div>
-			</div>
+		  </div>
 		</div>
 	</div>
 </body>
