minor cosmetic changes

--- a/ticket.html
+++ b/ticket.html
@@ -83,7 +83,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3 problem-metadata animated fadeInUp">
+			<div class="col-md-3 problem-metadata">
 				<h2><i class="fa fa-ticket"></i> #<span id="problemId"></span></h2>
 				<h4>Status: <span id="status"></span></h4>
 				<p><i class="fa fa-clock-o"></i>&nbsp; <span id="createdAt"></span></p>
@@ -95,7 +95,7 @@
 				<button type="button" class="btn btn-secondary w-100" id="button-edit">Edit this ticket</button>
 				<button type="button" class="btn btn-primary w-100" id="button-resolved" data-toggle="modal" data-target="#resolved-modal">Mark as resolved</button>
 			</div>
-			<div class="col-md-9 animated fadeInUp">
+			<div class="col-md-9">
 				<form>
 					<div class="form-group">
 						<div class="row">
