--- a/dash.html
+++ b/dash.html
@@ -54,7 +54,7 @@
 		<div class="row">
 			<div class="col">
 				<div class="jumbotron">
-					<h1 class="display-3">Helpdesk dashboard</h1>
+					<h1 class="display-3 mb-3">Helpdesk dashboard</h1>
 					<p class="lead">17COB290 - Team project deliverable part 1</p>
 					<hr>
 
