--- a/index.html
+++ b/index.html
@@ -9,31 +9,39 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/common.js"></script>
-	<script src="js/dash.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="container" style="margin-top: 5%">
-		<div class="card">
-		  <img class="card-img-top" src="loginLogo.jpg" alt="Card image cap">
-		  <div class="card-body" align="right">
-		    <h4 class="card-title">Sign in</h4>
-		    <form>
-			  <div class="form-group">
-			    <label for="exampleInputEmail1">Email address</label>
-			    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-			    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-			  </div>
-			  <div class="form-group">
-			    <label for="exampleInputPassword1">Password</label>
-			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-			  </div>
-			  <a href="dash.html">Login</a>
-			</form>
-		  </div>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div class="card">
+					<img class="card-img-top" src="images/login.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h4 class="card-title">Sign in</h4>
+						<form>
+							<div class="row">
+								<div class="col-md">
+									<div class="form-group">
+										<label for="username">Username</label>
+										<input type="email" class="form-control" id="username" >
+									</div>
+								</div>
+								<div class="col-md">
+									<div class="form-group">
+										<label for="password">Password</label>
+										<input type="password" class="form-control" id="password">
+									</div>
+								</div>
+							</div>
+							<a href="dash.html" class="btn btn-primary" style="float: right;">Login</a>
+						</form>
+					</div>
+				</div>	
+			</div>
 		</div>
 	</div>
 </body>
