--- a/new.html
+++ b/new.html
@@ -53,7 +53,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-3 problem-metadata animated fadeInUp">
+			<div class="col-sm-3 problem-metadata">
 				<h2><i class="fa fa-plus"></i> New ticket</h2>
 				<div class="form-group">
 					<label for="created-by">Created by</label>
@@ -63,7 +63,7 @@
 				<button type="button" class="btn btn-primary w-100" id="button-create" style="float: right;">Create ticket</button>
 				<h4 class="green" id="created-prompt" style="display: none;"><i class="fa fa-check"></i> Ticket created!</h4>
 			</div>
-			<div class="col-sm-9 animated fadeInUp">
+			<div class="col-sm-9">
 				<form>
 					<div class="row">
 						<div class="col-sm">
