add option to assign a specialist to a ticket

--- a/new.html
+++ b/new.html
@@ -92,6 +92,16 @@
 				</div>
 
 				<div class="form-group">
+					<label for="assign-specialist">Assign a specialist</label>
+					<select class="custom-select" id="assign-specialist">
+						<option>Please select...</option>
+						<option value="1">{specialist name} (0)</option>
+						<option value="2">{specialist name} (0)</option>
+						<option value="3">{specialist name} (0)</option>
+					</select>
+				</div>
+
+				<div class="form-group">
 					<label for="tags">Tags <i>(comma separated)</i></label>
 					<input class="form-control" id="tags">
 				</div>
