--- a/ticket.html
+++ b/ticket.html
@@ -97,21 +97,23 @@
 			</div>
 			<div class="col-md-9">
 				<form>
-					<div class="form-group">
-						<div class="row">
-							<div class="col-sm">
-								<div class="form-group">
-									<label for="callerName">Caller name</label>
-									<input type="text" class="form-control" id="callerName" disabled>
-								</div>
-							</div>
-							<div class="col-sm">
-								<div class="form-group">
-									<label for="callerEmail">Contact email</label>
-									<input type="text" class="form-control" id="callerEmail" disabled>
-								</div>
+					<div class="row">
+						<div class="col-sm">
+							<div class="form-group">
+								<label for="callerName">Caller name</label>
+								<input type="text" class="form-control" id="callerName" disabled>
 							</div>
 						</div>
+						<div class="col-sm">
+							<div class="form-group">
+								<label for="callerEmail">Contact email</label>
+								<input type="text" class="form-control" id="callerEmail" disabled>
+							</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="assignedSpecialist">Assigned specialist</label>
+						<input type="text" class="form-control" id="assignedSpecialist" disabled>
 					</div>
 					<div class="form-group">
 						<label for="problemClassification">Issue classification</label>
