add option for follow-up tickets

--- a/new.html
+++ b/new.html
@@ -60,6 +60,15 @@
 					<h4 id="created-by"></h4>
 				</div>
 				<hr>
+				<div class="btn-group w-100" data-toggle="buttons">
+					<label class="btn btn-secondary active w-50">
+						<input type="radio" name="ticket-type" id="ticket-new" autocomplete="off" checked>New
+					</label>
+					<label class="btn btn-secondary w-50">
+						<input type="radio" name="ticket-type" id="ticket-followup" autocomplete="off">Follow-up
+					</label>
+				</div>
+				<input type="text" class="form-control" id="followup-id" placeholder="This is a follow-up of...">
 				<button type="button" class="btn btn-primary w-100" id="button-create" style="float: right;">Create ticket</button>
 				<h4 class="green" id="created-prompt" style="display: none;"><i class="fa fa-check"></i> Ticket created!</h4>
 			</div>
