--- a/ticket.html
+++ b/ticket.html
@@ -88,6 +88,7 @@
 				<h4>Status: <span id="status"></span></h4>
 				<p><i class="fa fa-clock-o"></i>&nbsp; <span id="createdAt"></span></p>
 				<p><i class="fa fa-user"></i>&nbsp; <span id="createdBy"></span></p>
+				<p><i class="fa fa-repeat"></i>&nbsp; <span id="followupOf"></span></p>
 				<div class="tags"></div>
 
 				<hr>
