add logout button

--- a/analytics.html
+++ b/analytics.html
@@ -45,6 +45,7 @@
 						<option>Ghassan Ebrahim</option>
 					</select>
 				</div>
+				<a href="index.html" class="btn btn-outline-light logout-button">Log out</a>
 			</form>
 		</div>
 	</nav>
