--- a/dash.html
+++ b/dash.html
@@ -46,6 +46,7 @@
 						<option>Ghassan Ebrahim</option>
 					</select>
 				</div>
+				<a href="index.html" class="btn btn-outline-light logout-button">Log out</a>
 			</form>
 		</div>
 	</nav>
