--- a/new.html
+++ b/new.html
@@ -47,6 +47,7 @@
 						<option>Ghassan Ebrahim</option>
 					</select>
 				</div>
+				<a href="index.html" class="btn btn-outline-light logout-button">Log out</a>
 			</form>
 		</div>
 	</nav>
