add resolution details textarea, take username from login page

--- a/dash.html
+++ b/dash.html
@@ -35,17 +35,7 @@
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
-				<div class="input-group">
-					<span class="input-group-addon" id="basic-addon1">Current user:</span>
-					<select class="custom-select" id="user-select">
-						<option>Tom Snelling</option>
-						<option>Dan Page</option>
-						<option>Adam Morley</option>
-						<option>Timo Kiukkanen</option>
-						<option>Joe Cant</option>
-						<option>Ghassan Ebrahim</option>
-					</select>
-				</div>
+				<span class="navbar-text" id="current-user"></span>
 				<a href="index.html" class="btn btn-outline-light logout-button">Log out</a>
 			</form>
 		</div>
