--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/login.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -37,7 +38,8 @@
 									</div>
 								</div>
 							</div>
-							<a href="dash.html" class="btn btn-primary" style="float: right;">Login</a>
+							<i>For the sake of this demo, log in with any username and a blank password.</i>
+							<button type="button" class="btn btn-primary" id="login" style="float: right;">Login</button>
 						</form>
 					</div>
 				</div>	
