add refinable problem type

--- a/new.html
+++ b/new.html
@@ -83,17 +83,30 @@
 
 				<div class="form-group">
 					<label for="problem-type">Problem type</label>
-					<select class="custom-select" id="problem-type">
+					<br>
+					<select class="custom-select" id="problem-type-1">
 						<option>Please select...</option>
-						<option value="1">One</option>
-						<option value="2">Two</option>
-						<option value="3">Three</option>
+						<option value="1">Refinement 1 option 1</option>
+						<option value="2">Refinement 1 option 2</option>
+						<option value="3">Refinement 1 option 3</option>
+					</select>
+					<select class="custom-select" id="problem-type-2" style="display: none;">
+						<option>Please select...</option>
+						<option value="1">Refinement 2 option 1</option>
+						<option value="2">Refinement 2 option 2</option>
+						<option value="3">Refinement 2 option 3</option>
+					</select>
+					<select class="custom-select" id="problem-type-3" style="display: none;">
+						<option>Please select...</option>
+						<option value="1">Refinement 3 option 1</option>
+						<option value="2">Refinement 3 option 2</option>
+						<option value="3">Refinement 3 option 3</option>
 					</select>
 				</div>
 
 				<div class="form-group">
 					<label for="assign-specialist">Assign a specialist</label>
-					<select class="custom-select" id="assign-specialist">
+					<select class="custom-select block-select" id="assign-specialist">
 						<option>Please select...</option>
 						<option value="1">{specialist name} (0)</option>
 						<option value="2">{specialist name} (0)</option>
